--- a/Mobile Development/app/src/main/res/layout/fragment_forgot_password.xml
+++ b/Mobile Development/app/src/main/res/layout/fragment_forgot_password.xml
@@ -15,7 +15,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView10"
-        app:startIconDrawable="@drawable/ic_baseline_email_24"
+        app:startIconDrawable="@drawable/ic_email"
         >
 
         <dicoding.zulfikar.literasearchapp.view.custom.EmailEditText
@@ -35,7 +35,7 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:backgroundTint="@android:color/transparent"
-        android:src="@drawable/ic_baseline_back_24"
+        android:src="@drawable/ic_back"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
