--- a/Mobile Development/app/src/main/res/layout/fragment_register.xml
+++ b/Mobile Development/app/src/main/res/layout/fragment_register.xml
@@ -75,7 +75,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_name"
-                app:startIconDrawable="@drawable/baseline_person_24">
+                app:startIconDrawable="@drawable/ic_person">
 
                 <dicoding.zulfikar.literasearchapp.view.custom.NamaEditText
                     android:id="@+id/et_name"
@@ -108,7 +108,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_Email"
-                app:startIconDrawable="@drawable/ic_baseline_email_24">
+                app:startIconDrawable="@drawable/ic_email">
 
                 <dicoding.zulfikar.literasearchapp.view.custom.EmailEditText
                     android:id="@+id/et_email"
@@ -142,7 +142,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_password"
-                app:startIconDrawable="@drawable/ic_baseline_lock_24">
+                app:startIconDrawable="@drawable/ic_lock">
 
                 <dicoding.zulfikar.literasearchapp.view.custom.PasswordEditText
                     android:id="@+id/et_password"
@@ -250,7 +250,7 @@
                 android:layout_height="50dp"
                 android:backgroundTint="@android:color/transparent"
                 android:scaleType="fitCenter"
-                android:src="@drawable/google_color_svgrepo_com"
+                android:src="@drawable/ic_google"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView15" />
